//
//  AddCityViewController.swift
//  weatherlr
//
//  Created by drvolks on 2016-04-07.
//  Copyright © 2016 drvolks. All rights reserved.
//

import UIKit

class AddCityViewController: UIViewController, UITableViewDelegate, UITableViewDataSource, UISearchBarDelegate {

    @IBOutlet weak var cityTable: UITableView!
    @IBOutlet weak var searchText: UISearchBar!
    @IBOutlet weak var navigationTitle: UINavigationItem!
    @IBOutlet weak var cancelButton: UIBarButtonItem!
    
    var allCityList = [City]()
    var allCities = [String:[City]]()
    var filteredCityList = [City]()
    var filteredCities = [String:[City]]()
    var sections = [Int:String]()
    var allSections = [Int:String]()
    var modalDelegate:ModalDelegate?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.title = "Add City".localized()
        // TODO à vérifier, ne fonctionne pas
        cancelButton.possibleTitles = ["Cancel".localized()]
        cancelButton.title = "Cancel".localized()
        // ne fonctionne plus en iOS 13
        // searchText.setValue("Cancel".localized(), forKey:"_cancelButtonText")

        allCityList = CityHelper.loadAllCities()
        allCities = buildCityIndex(allCityList)
        allSections = buildSections(allCities)

        resetSearch()

        cityTable.delegate = self
        cityTable.dataSource = self
        searchText.delegate = self

        // Stable accessibility identifiers for UI tests.
        cityTable.accessibilityIdentifier = "addCityTable"
        searchText.accessibilityIdentifier = "addCitySearch"
        cancelButton.accessibilityIdentifier = "addCityCancel"

        cancelButton.isEnabled = true

        view.backgroundColor = .systemBackground
        cityTable.backgroundColor = .systemGroupedBackground
        cityTable.sectionIndexBackgroundColor = UIColor.clear
    }
    
    override func viewWillDisappear(_ animated: Bool) {
        if let delegate = modalDelegate {
            delegate.refresh()
        }
    }
    
    func buildCityIndex(_ cityListToProcess: [City]) -> [String:[City]] {
        var cityDictionary = [String:[City]]()
        
        for city in cityListToProcess {
            let name = CityHelper.cityName(city)
            let letter = String(name.uppercased().prefix(1))
            cityDictionary[letter, default: [City]()].append(city)
        }
        
        return sortCityIndex(cityDictionary)
    }
    
    func buildSections(_ cityDictionary : [String:[City]]) -> [Int:String] {
        let sortedKeys = cityDictionary.keys.sorted()
        var newSections = [Int:String]()
        for i in 0..<sortedKeys.count {
            let key = sortedKeys[i]
            newSections[i] = key
        }

        return newSections
    }
    
    func sortCityIndex(_ cityDictionary : [String:[City]]) -> [String:[City]] {
        var sortedCityDictionary = [String:[City]]()
        let sortedKeys = cityDictionary.keys.sorted()
        
        for i in 0..<sortedKeys.count {
            let key = sortedKeys[i]
            
            guard let cityListForLettre = cityDictionary[key] else { continue }
            sortedCityDictionary[key] = CityHelper.sortCityList(cityListForLettre)
        }

        return sortedCityDictionary
    }

    override func didReceiveMemoryWarning() {
        super.didReceiveMemoryWarning()
        // Dispose of any resources that can be recreated.
    }
    
    
    func searchBar(_ searchBar: UISearchBar, textDidChange searchText: String) {
        var newFilteredList = [City]()
        
        if searchText.isEmpty {
            resetSearch()
        } else {
            newFilteredList = CityHelper.searchCity(searchText, allCityList: allCityList)
            
            filteredCities = buildCityIndex(newFilteredList)
            sections = buildSections(filteredCities)
            filteredCityList = newFilteredList
        }
        cityTable.reloadData()
    }
    
    func resetSearch() {
        filteredCityList = allCityList
        filteredCities = allCities
        sections = allSections
    }
    
    // MARK: serch bar
    func searchBarCancelButtonClicked(_ searchBar: UISearchBar) {
        resetSearch()
        
        searchBar.text = ""
        searchBar.resignFirstResponder()
        
        cityTable.reloadData()
    }
    
    // MARK: - Navigation
    @IBAction func cancel(_ sender: UIBarButtonItem) {
        dismiss(animated: true, completion: nil)
    }
    
    override func prepare(for segue: UIStoryboardSegue, sender: Any?) {
        
    }

    // MARK: table
    func numberOfSections(in tableView: UITableView) -> Int {
        return sections.count
    }
    
    func sectionIndexTitles(for tableView: UITableView) -> [String]? {
        return filteredCities.keys.sorted()
    }
    
    func tableView(_ tableView: UITableView, heightForHeaderInSection section: Int) -> CGFloat {
        return 30
    }
    
    func tableView(_ tableView:UITableView, numberOfRowsInSection section: Int) -> Int {
        guard let key = sections[section] else { return 0 }
        if let sectionValues = filteredCities[key] {
            return sectionValues.count
        }
        
        return 0
    }
    
    func tableView(_ tableView: UITableView, titleForHeaderInSection section: Int) -> String? {
        return sections[section]
    }
    
    func tableView(_ tableView:UITableView, cellForRowAt indexPath:IndexPath) -> UITableViewCell {
        
        guard let cell = tableView.dequeueReusableCell(withIdentifier: "cityCell", for: indexPath) as? CityTableViewCell else {
            assertionFailure("Expected cityCell to be a CityTableViewCell")
            return UITableViewCell(style: .default, reuseIdentifier: "cityCellFallback")
        }
        
        let city = cityRow(indexPath)
        
        cell.cityLabel.text = CityHelper.cityName(city) + ", " + city.province.uppercased()
        cell.cityLabel.textColor = .label
        cell.backgroundColor = .secondarySystemGroupedBackground

        return cell
    }
    
    
    
    func cityRow(_ indexPath: IndexPath) -> City {
        guard let key = sections[indexPath.section],
              let cities = filteredCities[key],
              indexPath.row < cities.count else {
            return City()
        }
        return cities[indexPath.row]
    }
    
    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
        let city = cityRow(indexPath)

        PreferenceHelper.addFavorite(city)

        // Dismiss all the way back to the root (works for both 1-level and 2-level presentation)
        var presenter = self.presentingViewController
        while let parent = presenter?.presentingViewController {
            presenter = parent
        }
        presenter?.dismiss(animated: true, completion: nil)
    }
    
    override var preferredStatusBarStyle: UIStatusBarStyle {
        return .default
    }
    
    func scrollViewWillBeginDragging(_ scrollView: UIScrollView) {
        searchText.resignFirstResponder()
    }
}
