...
import WidgetKit

class SettingsViewController: UITableViewController, @preconcurrency ModalDelegate {

    @IBOutlet weak var cityTable: UITableView!
    @IBOutlet weak var addButton: UIBarButtonItem!
    @IBOutlet weak var doneButton: UIBarButtonItem!

    var savedCities = [City]()
    var selectedCity:City?
    var selectedCityWeatherInformation:WeatherInformation?
    var modalDelegate:ModalDelegate?

...

    override func viewDidLoad() {
        super.viewDidLoad()

        overrideUserInterfaceStyle = .unspecified
        tableView.backgroundColor = .systemGroupedBackground
        tableView.accessibilityIdentifier = "settingsTable"
        navigationController?.view.backgroundColor = .systemGroupedBackground

        // Stable accessibility identifiers for UI tests.
        addButton?.accessibilityIdentifier = "addCityButton"
        doneButton?.accessibilityIdentifier = "doneButton"

        let navBarAppearance = UINavigationBarAppearance()
        navBarAppearance.configureWithOpaqueBackground()
        navBarAppearance.backgroundColor = .systemGroupedBackground
        navBarAppearance.titleTextAttributes = [.foregroundColor: UIColor.label]
...
